# rust-tink

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: aead.rs  errors.rs  keysets.rs  lib.rs  mac.rs  protos.rs
src/aead/: algo.rs  mod.rs  rust_crypto_aead.rs
src/aead/key_managers/: aes_gcm.rs
src/mac/: mod.rs
