[package]
name = "tink"
version = "0.0.0"
authors = ["Jake <jake@jakeswenson.com>"]
edition = "2018"
description = "A Rust encryption library compatible with googles tink encryption library"
license = "MPL-2.0"

[dependencies]

[dependencies.rust-crypto]
version = "^0.2"
optional = true

[features]
default = ["crypto-rust-crypto"]

crypto-rust-crypto = ["rust-crypto"]
